Made changes to _config.yml file and updated basic details

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # main text of home
 name: Akshay Jain
-bio: A Man who travels the world eating noodles
+bio: It only takes few lines of code to start...  
 
 # twitter summary info
 description: A blog about technology and stuff related
@@ -30,42 +30,36 @@ permalink: /:title/
 
 # if you don't want comments in your posts, leave categories empty
 disqus:
-  shortname: mydisqus # enter this from your disqus account
+  shortname: jainnakki-github-io # enter this from your disqus account
   categories: [blog, project] # only show disqus for posts that have these categories
 
 # if you don't have any of social below, comment the line
-facebook: myfacebook
-twitter: mytwitter
+#facebook: myfacebook
+twitter: jainnakki
 # google: mygoogle
 # instagram: myinstagram
 # pinterest: mypinterest
-# linkedin: mylinkedin
+linkedin: jainnakki
 # youtube: myyoutube
 # spotify: myspotify
-github: mygithub
+github: jainnakki
 # gitlab: mygitlab
 # lastfm: mylastfm
 # stackoverflow: 7044681/mystackoverflow
 # quora: userquora
 # reddit: username
-medium: medium
+medium: jainnakki
 # vimeo: myvimeo
 # lanyrd: mylanyrd
-email: myemail@gmail.com
+email: jainnakki@gmail.com
 
 authors:
-    johndoe:
-        name: John Doe
-        bio: A Man who travels the world eating noodles
+    akshayjain:
+        name: Akshay Jain
+        bio: My personal blog based on Jekyll
         external-image: false
-        picture: assets/images/profile.jpg
-        twitter: johndoe
-    jamesfoster:
-        name: James Foster
-        bio: A Man who develops software with coffee
-        external-image: false
-        picture: assets/images/james.jpg
-        twitter: jamesfoster
+        picture: assets/images/profile.png
+        twitter: jainnakki
 
 # do you want a larger site? change the option below
 # options: [normal, large] | default: normal
