Edited Bio, Resume link removed, social handles updated, contact page enabled

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # main text of home
 name: Akshay Jain
-bio: It only takes few lines of code to start...  
+bio: Freelancer. Marketing Manager in Surat Textile Industry    
 
 # twitter summary info
 description: A blog about technology and stuff related
@@ -10,11 +10,6 @@ description: A blog about technology and stuff related
 external-image: false
 picture: assets/images/profile.png
 
-# If you want to include your resume, set to true
-# and specify source (external or local).
-resume: true
-resume-external: true
-resume-url: https://google.com/?q=my+resume
 
 url: http://jainnakki.github.io
 # your url: http://USERNAME.github.io
@@ -34,8 +29,8 @@ disqus:
   categories: [blog, project] # only show disqus for posts that have these categories
 
 # if you don't have any of social below, comment the line
-#facebook: myfacebook
-twitter: jainnakki
+# facebook: myfacebook
+# twitter: jainnakki
 # google: mygoogle
 # instagram: myinstagram
 # pinterest: mypinterest
@@ -76,7 +71,7 @@ projects: true
 # if you don't need "about" or "blog", comment them out below
 about: true
 blog: true
-
+contact: true
 # do you want to show the "read time" of the posts?
 read-time: true
 
